# ewan-kb

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml
.claude/skills/ewankb/: SKILL.md
.claude/skills/ewankb-query/: SKILL.md
ewankb/: __main__.py
examples/: llm_config.example.json
tools/: TOOLS.md  config_loader.py
tools/discover/: discover_domains.py
tools/extract_kb/: enrich_kb.py  extract_to_kb.py  gen_code_module_docs.py  gen_domain_overview.py  gen_processes.py
tools/graph_runtime/: bm25_index.py
